# dtex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/skills/release-dtex/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  connector_request.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
assets/: README.md
det/: __init__.py  registry.py  types.py
det/cli/: __init__.py  _discovery.py  _format.py  _runs.py  _scaffold.py  _secrets.py  _state.py
det/connectors/filesystem/: README.md  __init__.py  backends.py  register.yaml  source.py
det/connectors/postgres/: README.md  __init__.py  client.py  register.yaml  source.py
det/connectors/rest/: __init__.py  pagination.py  register.yaml  source.py
det/connectors/shiphero/: queries.py  register.yaml  source.py
det/connectors/stripe/: README.md  client.py  pagination.py  register.yaml  source.py
det/destinations/bigquery/: README.md  __init__.py  client.py  ddl.py  destination.py  register.yaml
det/destinations/duckdb/: __init__.py  ddl.py  destination.py  register.yaml
det/engine/: __init__.py  config.py  configs.py  discovery.py  logger.py  runner.py
det/secrets/: __init__.py  _aws.py  _gcp.py  _vault.py  resolvers.py
det/sources/filesystem/: README.md  backends.py  readers.py  register.yaml  source.py
det/sources/postgres/: README.md  source.py  type_mapping.py
det/sources/rest/: README.md  __init__.py  client.py  extractors.py  pagination.py  register.yaml  source.py
det/sources/shiphero/: README.md  __init__.py  client.py  register.yaml  source.py  windows.py
det/sources/stripe/: client.py  pagination.py  register.yaml  source.py
detx/: __init__.py  registry.py  types.py
detx/cli/: __init__.py  _discovery.py  _format.py  _runs.py  _scaffold.py  _secrets.py  _state.py
detx/destinations/bigquery/: README.md  __init__.py  client.py  ddl.py  destination.py  register.yaml
detx/destinations/duckdb/: __init__.py  ddl.py  destination.py  register.yaml
detx/engine/: __init__.py  config.py  configs.py  discovery.py  logger.py  runner.py
detx/secrets/: __init__.py  _aws.py  _gcp.py  _vault.py  resolvers.py
detx/sources/filesystem/: README.md  __init__.py  backends.py  readers.py  register.yaml  source.py
detx/sources/postgres/: README.md  __init__.py  client.py  register.yaml  source.py  type_mapping.py
detx/sources/rest/: README.md  __init__.py  client.py  extractors.py  pagination.py  source.py
detx/sources/shiphero/: README.md  __init__.py  client.py  pagination.py  queries.py  register.yaml  source.py  windows.py
detx/sources/stripe/: README.md  client.py  pagination.py  register.yaml  source.py
docs/: 00-vision-and-naming.md  01-landscape-and-comparison.md  02-architecture.md  03-connector-contract.md  04-connector-body.md  05-destinations-and-state.md  06-project-anatomy.md  07-cli-and-library-api.md  08-security.md  09-logging-and-observability.md  10-roadmap-and-scope.md  11-open-questions.md  12-configs.md  README.md
docs/_archive/: stripe-research-2026-05.md
docs/_internal/: release.md  streams-redesign-plan.md
docs/connectors/: stripe-research.md
dtex/: __init__.py  registry.py  types.py
dtex/cli/: __init__.py  _discovery.py  _format.py  _runs.py  _scaffold.py  _secrets.py  _skills.py  _state.py
dtex/destinations/: __init__.py
dtex/destinations/bigquery/: README.md  __init__.py  client.py  ddl.py  destination.py  register.yaml
dtex/destinations/duckdb/: README.md  __init__.py  ddl.py  destination.py  register.yaml
dtex/engine/: __init__.py  config.py  configs.py  discovery.py  logger.py  normalize.py  runner.py
dtex/secrets/: __init__.py  _aws.py  _gcp.py  _vault.py  resolvers.py
dtex/skills/: dtex-debug.md  dtex-write-config.md  dtex-write-connector.md
dtex/sources/cockroachdb/: README.md  __init__.py  client.py  extract.py  register.yaml  source.py  type_mapping.py
dtex/sources/filesystem/: README.md  __init__.py  backends.py  readers.py  register.yaml  source.py
dtex/sources/gads/: README.md  __init__.py  client.py  register.yaml  source.py
dtex/sources/postgres/: README.md  __init__.py  client.py  register.yaml  source.py  type_mapping.py
dtex/sources/rest/: README.md  __init__.py  client.py  extractors.py  pagination.py  source.py
dtex/sources/revenuecat/: README.md  __init__.py  client.py  register.yaml  source.py
dtex/sources/shiphero/: README.md  __init__.py  client.py  register.yaml  source.py  windows.py
dtex/sources/stripe/: README.md  __init__.py  client.py  pagination.py  register.yaml  sigma_client.py  source.py
simple_e/: __init__.py  cli.py  registry.py  types.py
simple_e/cli/: __init__.py  _discovery.py  _format.py  _scaffold.py  _state.py
simple_e/connectors/filesystem/: README.md  __init__.py  backends.py  readers.py  register.yaml  source.py
simple_e/connectors/postgres/: README.md  __init__.py  client.py  register.yaml  source.py  type_mapping.py
simple_e/connectors/rest/: README.md  __init__.py  client.py  extractors.py  pagination.py  source.py
simple_e/connectors/shiphero/: README.md  __init__.py  client.py  pagination.py  register.yaml  (+2 more)
simple_e/engine/: __init__.py  config.py  discovery.py  logger.py  runner.py
tests/: conftest.py  test_cli.py  test_configs.py  test_duckdb_destination.py  test_engine.py  test_format_marks.py  test_leasing.py  test_normalize.py  test_registry.py  test_run_records.py  test_secret_resolver_aws.py  test_secret_resolver_gcp.py  test_secret_resolver_vault.py  test_secret_resolvers.py  test_skeleton.py  test_skills_install.py  test_smoke.py  test_state_flush.py  test_stream_parallelism.py  test_types.py
tests/connectors/: __init__.py  test_cockroachdb.py  test_filesystem.py  test_gads.py  test_postgres.py  test_rest.py  test_revenuecat.py  test_shiphero.py  test_stripe.py
tests/destinations/: __init__.py  test_bigquery.py
tests/fixtures/: det_project.yml  detx_project.yml  dtex_project.yml  profiles.yml  simple_e_project.yml
(+31 files in other folders)
