[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-e"
version = "0.1.0"
description = "simpl.E — a simple, open-source Python extract-load (EL) tool. dlt meets dbt."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Albinas Plesnys" },
]
keywords = ["extract-load", "el", "elt", "data-engineering", "connectors", "dbt"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml",
    "click",
    "duckdb",
    "requests>=2.31",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-requests",
]
parquet = ["pyarrow>=15"]
gcs = ["google-cloud-storage>=2.10"]
s3 = ["boto3>=1.28"]

[project.scripts]
simple-e = "simple_e.cli:main"

[project.urls]
Homepage = "https://github.com/albinasplesnys/simple_e"
Documentation = "https://github.com/albinasplesnys/simple_e/tree/main/docs"
Source = "https://github.com/albinasplesnys/simple_e"

[tool.hatch.build]
include = [
    "simple_e/**",
]

[tool.hatch.build.targets.wheel]
packages = ["simple_e"]

[tool.hatch.build.targets.sdist]
include = [
    "simple_e/**",
    "docs/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that need a live external service (gated by env var, e.g. POSTGRES_TEST_URL)",
]
